@@ -16,10 +16,10 @@
     </modules>
 
 	<properties>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
-
-        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
+        <!--<maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>14</maven.compiler.source>-->
+        <java.version>14</java.version>
+        <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
     </properties>
 
     <dependencies>
@@ -43,7 +43,7 @@
         <plugins>
             <!--<plugin>
                 <groupId>org.flywaydb</groupId>
-                <artifactId>flyway-maven-plugin</artifactId>
+                <artifactId>flyway-maven-plugin</artifactId>cz.jalasoft.demo
                 <version>6.0.7</version>
                 <configuration>
                     <url>jdbc:h2:file:~/psaninastroji</url>
@@ -60,14 +60,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>6.2</version> <!-- Use newer version of ASM -->
-                    </dependency>
-                </dependencies>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>14</release>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
